--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -846,7 +846,7 @@ ol.flex-control-nav { display: none; }
    max-width: 560px;
  }
  .templatemo-nav li a {
-   padding: 15px 28px;
+   /*padding: 15px 28px;*/
    width: 106px;
  }
  .templatemo-top-section {
@@ -877,8 +877,9 @@ ol.flex-control-nav { display: none; }
    max-width: 440px;
  }
  .templatemo-nav li a {
-   padding: 15px 20px;
-   width: 185px;
+   /*padding: 15px 20px;*/
+   width: 85px;
+   font-size: 10px;
  }
  .templatemo-welcome {
    margin-top: 55px;
