--- a/auto/css/templatemo-style.css
+++ b/auto/css/templatemo-style.css
@@ -385,6 +385,9 @@ body {
   box-shadow: 0 2px 5px 0 rgba(224,224,224,1);
   max-width: 220px;
 }
+.tm-item-container-210 {
+  max-width: 210px;
+}
 .tm-item-description,
 .tm-item-price {
   font-weight: 700;
