--- a/football2/layout/styles/layout.css
+++ b/football2/layout/styles/layout.css
@@ -33,7 +33,10 @@ File: Layout CSS
 
 /* Header
 --------------------------------------------------------------------------------------------------------------- */
-#header{padding:50px 0;}
+/*#header{padding:50px;}*/
+#header{padding:50px 20px; background-color:#FFFFFF;}
+/**/main {padding: 0 20px; background-color:#FFFFFF;}
+/**/.content {padding: 0 20px; background-color:#FFFFFF;}
 
 #header section{display:table; width:100%; height:100%; margin-bottom:60px;}
 #header section > div{display:table-cell; width:33.33333333333333%; height:100%; vertical-align:middle;}
@@ -133,7 +136,8 @@ File: Layout CSS
 
 /* Footer
 --------------------------------------------------------------------------------------------------------------- */
-#footer{padding:80px 0;}
+/*#footer{padding:80px 0;}*/
+/**/#footer{padding: 80px 20px; background-color: rgba(0, 0, 0, 0.9);}
 
 #footer .heading{margin-bottom:50px; font-size:1.2rem;}
 
@@ -280,7 +284,7 @@ td{border-width:0 1px;}
 
 /* Colours
 --------------------------------------------------------------------------------------------------------------- */
-body{color:#7A7A7A; background-color:#FFFFFF;}
+body{color:#7A7A7A; /*background-color:#FFFFFF;*/ background: #08292b url(../../images/demo/grass-field-background2.jpg) right center repeat;}
 a{color:#FFA41F;}
 a:active, a:focus{background:transparent;}/* IE10 + 11 Bugfix - prevents grey background */
 hr, .borderedbox{border-color:#D7D7D7;}
@@ -300,10 +304,10 @@ input:focus, textarea:focus, *:required:focus{border-color:#FFA41F;}
 
 /* Rows */
 .row0, .row0 a{color:#FFFFFF; background-color:#FFA41F;}
-.row1{color:#7A7A7A; background-color:#FFFFFF;}
-.row2{color:#7A7A7A; background-color:#F7F7F7;}
-.row3{color:#7A7A7A; background-color:#FFFFFF;}
-.row4{color:#FFFFFF; background-color:#121212;}
+.row1{color:#7A7A7A; /*background-color:#FFFFFF;*/}
+.row2{color:#7A7A7A; /*background-color:#F7F7F7;*/}
+.row3{color:#7A7A7A; /*background-color:#FFFFFF;*/}
+.row4{color:#FFFFFF; /*background-color:#121212;*/}
 .row5, .row5 a{color:#7A7A7A; background-color:#FFFFFF;}
 
 .row2 .heading, .row3 .heading{color:#121212;}
