--- a/football2/layout/styles/layout.css
+++ b/football2/layout/styles/layout.css
@@ -255,7 +255,9 @@ td{border-width:0 1px;}
 #gallery{display:block; width:100%; margin-bottom:50px;}
 #gallery figure figcaption{display:block; width:100%; clear:both;}
 #gallery li{margin-bottom:30px;}
-
+#gallery img{border:1px solid #474747;}
+#gallery img:hover{border:1px solid #FFA41F;box-shadow: 0 0 20px #FFA41F;}
+/*#gallery a{white-space: nowrap;overflow: hidden;text-overflow: ellipsis;}*/
 
 /* Font Awesome Social Icons
 --------------------------------------------------------------------------------------------------------------- */
@@ -304,10 +306,10 @@ input:focus, textarea:focus, *:required:focus{border-color:#FFA41F;}
 
 /* Rows */
 .row0, .row0 a{color:#FFFFFF; background-color:#FFA41F;}
-.row1{color:#7A7A7A; /*background-color:#FFFFFF;*/}
-.row2{color:#7A7A7A; /*background-color:#F7F7F7;*/}
-.row3{color:#7A7A7A; /*background-color:#FFFFFF;*/}
-.row4{color:#FFFFFF; /*background-color:#121212;*/}
+.row1{color:#7A7A7A; background: rgba(255, 255, 255, 0.6);/*background-color:#FFFFFF;*/}
+.row2{color:#7A7A7A; background: rgba(255, 255, 255, 0.6);/*background-color:#F7F7F7;*/}
+.row3{color:#7A7A7A; background: rgba(255, 255, 255, 0.6);/*background-color:#FFFFFF;*/}
+.row4{color:#FFFFFF; background: rgba(255, 255, 255, 0.6);/*background-color:#121212;*/}
 .row5, .row5 a{color:#7A7A7A; background-color:#FFFFFF;}
 
 .row2 .heading, .row3 .heading{color:#121212;}
