--- a/football2/layout/styles/framework.css
+++ b/football2/layout/styles/framework.css
@@ -90,6 +90,7 @@ It should be used in conjunction with a second class or ID
 /* HTML 5 Overrides
 --------------------------------------------------------------------------------------------------------------- */
 address, article, aside, figcaption, figure, footer, header, main, nav, section{display:block; margin:0; padding:0;}
+article {min-height: 120px;}
 
 
 /* Grid
