--- a/football2/layout/styles/layout.css
+++ b/football2/layout/styles/layout.css
@@ -34,9 +34,9 @@ File: Layout CSS
 /* Header
 --------------------------------------------------------------------------------------------------------------- */
 /*#header{padding:50px;}*/
-#header{padding:50px 20px; background-color:#FFFFFF;}
-/**/main {padding: 0 20px; background-color:#FFFFFF;}
-/**/.content {padding: 0 20px; background-color:#FFFFFF;}
+#header{padding:50px 20px; background-color:#FFFFFF;}/**/
+main {padding: 0 20px; background-color:#FFFFFF;}/**/
+.content {padding: 0 20px; background-color:#FFFFFF;}/**/
 
 #header section{display:table; width:100%; height:100%; margin-bottom:60px;}
 #header section > div{display:table-cell; width:33.33333333333333%; height:100%; vertical-align:middle;}
@@ -66,7 +66,7 @@ File: Layout CSS
 
 /* Content Area
 --------------------------------------------------------------------------------------------------------------- */
-.container{padding:80px 0;}
+.container{padding: 40px 0;}/*.container{padding: 80px 0;}*/
 
 /* Content */
 .container .content{}
@@ -108,6 +108,7 @@ File: Layout CSS
 #comments ul{margin:0 0 40px 0; padding:0; list-style:none;}
 #comments li{margin:0 0 10px 0; padding:15px;}
 #comments .avatar{float:right; margin:0 0 10px 10px; padding:3px; border:1px solid;}
+#comments .avatar:hover {border-color:#FFA41F;box-shadow: 0 0 20px #FFA41F;}/**/
 #comments address{font-weight:bold;}
 #comments time{font-size:smaller;}
 #comments .comcont{display:block; margin:0; padding:0;}
@@ -137,7 +138,7 @@ File: Layout CSS
 /* Footer
 --------------------------------------------------------------------------------------------------------------- */
 /*#footer{padding:80px 0;}*/
-/**/#footer{padding: 80px 20px; background-color: rgba(0, 0, 0, 0.9);}
+#footer{padding: 80px 20px; background-color: rgba(0, 0, 0, 0.9);}/**/
 
 #footer .heading{margin-bottom:50px; font-size:1.2rem;}
 
@@ -256,8 +257,9 @@ td{border-width:0 1px;}
 #gallery{display:block; width:100%; margin-bottom:50px;}
 #gallery figure figcaption{display:block; width:100%; clear:both;}
 #gallery li{margin-bottom:30px;}
-#gallery img{border:1px solid #474747;}
+#gallery img{border:1px solid #D7D7D7; padding: 5px;}
 #gallery img:hover{border:1px solid #FFA41F;box-shadow: 0 0 20px #FFA41F;}
+.thumbs   img:hover{border:1px solid #FFA41F;box-shadow: 0 0 20px #FFA41F;}
 /*#gallery a{white-space: nowrap;overflow: hidden;text-overflow: ellipsis;}*/
 
 /* Font Awesome Social Icons
@@ -276,6 +278,7 @@ td{border-width:0 1px;}
 .faicon-linkedin:hover{background-color:#0E76A8;}
 .faicon-twitter:hover{background-color:#00ACEE;}
 .faicon-vk:hover{background-color:#4E658E;}
+.faicon-ok:hover{background-color:#FFA41F;}
 
 
 /* ------------------------------------------------------------------------------------------------------------ */
