--- a/football2/layout/styles/layout.css
+++ b/football2/layout/styles/layout.css
@@ -39,7 +39,7 @@ main {padding: 0 20px; background-color:#FFFFFF;}/**/
 .content {padding: 0 20px; background-color:#FFFFFF;}/**/
 
 #header section{display:table; width:100%; height:100%; margin-bottom:60px;}
-#header section > div{display:table-cell; width:33.33333333333333%; height:100%; vertical-align:middle;}
+#header section > div{display:table-cell; /*width:33.33333333333333%;*/ float: none; height:100%; vertical-align:middle;}
 #header section > div *{margin:0;}
 #header section > div:nth-child(1){}
 #header section > div:nth-child(2){text-align:center;}
@@ -108,7 +108,9 @@ main {padding: 0 20px; background-color:#FFFFFF;}/**/
 #comments ul{margin:0 0 40px 0; padding:0; list-style:none;}
 #comments li{margin:0 0 10px 0; padding:15px;}
 #comments .avatar{float:right; margin:0 0 10px 10px; padding:3px; border:1px solid;}
-#comments .avatar:hover {border-color:#FFA41F;box-shadow: 0 0 20px #FFA41F;}/**/
+/*#comments .avatar:hover {border-color:#FFA41F;box-shadow: 0 0 20px #FFA41F;}*/
+#comments a .avatar:hover {border-color:#FFA41F;box-shadow: 0 0 20px #FFA41F;}
+
 #comments address{font-weight:bold;}
 #comments time{font-size:smaller;}
 #comments .comcont{display:block; margin:0; padding:0;}
@@ -306,7 +308,23 @@ input:focus, textarea:focus, *:required:focus{border-color:#FFA41F;}
 
 .btn, .btn.inverse:hover{color:#FFFFFF; background-color:#FFA41F; border-color:#FFA41F;}
 .btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}
-
+.content #ajaxSearch_form label {width: 50%;float: left;}
+.content #ajaxSearch_submit{
+	color:#FFFFFF;
+	background-color:#FFA41F;
+	border-color:#FFA41F;
+	display: inline-block;
+    padding: 8px 18px 10px;
+    text-transform: uppercase;
+    border: 1px solid;
+	} /**/
+.content #ajaxSearch_submit:hover{color:inherit; background-color:transparent; border-color:inherit;} /**/
+.content #ajaxSearch_input{
+	width: 100%;
+    padding: 8px 18px 10px;
+    border-width: 1px;
+	border-color: #F2F2F2;
+	} /**/
 
 /* Rows */
 .row0, .row0 a{color:#FFFFFF; background-color:#FFA41F;}
@@ -380,7 +398,6 @@ tr, #comments li, #comments input[type="submit"], #comments input[type="reset"]{
 tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color:#F7F7F7;}
 table a, #comments a{background-color:inherit;}
 
-
 /* ------------------------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------------------------ */
@@ -407,7 +424,8 @@ table a, #comments a{background-color:inherit;}
 
 	#topbar{}
 
-	#header{padding:30px 0;}
+	/*#header{padding:30px 0;}*/
+	#header{padding:50px 20px;}/**/ 
 	#header #logo{margin-top:3px;}
 
 	#mainav{}
@@ -415,6 +433,8 @@ table a, #comments a{background-color:inherit;}
 	#mainav form{display:block;}
 
 	#breadcrumb{}
+
+	.scrollable{display:block; width:100%; margin:0 0 30px 0; padding:0 0 15px 0; overflow:auto; overflow-x:scroll;}
 
 	.container{}
 	#comments input[type="reset"]{margin-top:10px;}
@@ -432,7 +452,7 @@ table a, #comments a{background-color:inherit;}
 	.fl_left, .fl_right{display:block; float:none;}
 	.group .group > *:last-child, .clear .clear > *:last-child, .clear .group > *:last-child, .group .clear > *:last-child{margin-bottom:0;}/* Experimental - Needs more testing in different situations, stops double margin when stacking */
 	.one_half, .one_third, .two_third, .one_quarter, .two_quarter, .three_quarter{display:block; float:none; width:auto; margin:0 0 30px 0; padding:0;}
-
+padding: 50px 20px;
 	#header{text-align:center;}
 	#header section > div form{width:100%; max-width:300px; float:none; margin:0 auto;}
 	#header section > div form input{float:none;}
