--- a/wavefire/layout/styles/layout.css
+++ b/wavefire/layout/styles/layout.css
@@ -59,7 +59,7 @@ File: Layout CSS
 
 /* Page Intro
 --------------------------------------------------------------------------------------------------------------- */
-#pageintro{padding:180px 0;}
+#pageintro{padding:100px 0;}/*{padding:180px 0;}*/
 
 #pageintro article{display:block; max-width:60%; margin:0 auto; text-align:center;}
 #pageintro .heading{margin-bottom:20px; font-size:4rem;}
